@@ -1,5 +1,11 @@
 2018-11-30  Alex Christensen  <achristensen@webkit.org>
 
+        Fix Windows build.
+
+        * WebCoreSupport/WebFrameLoaderClient.h:
+
+2018-11-30  Alex Christensen  <achristensen@webkit.org>
+
         Move URL from WebCore to WTF
         https://bugs.webkit.org/show_bug.cgi?id=190234
 
